# AI-RAG-Business-Report-Analyst

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: 00-always.mdc  rag.mdc  tests.mdc  writing-rules.mdc
.github/workflows/: ci.yml
src/rag_analyst/: __init__.py  __main__.py  config.py  evaluation.py  ingest.py  prompts.py  response.py  retrieval.py  runner.py
src/rag_analyst/reporting/: __init__.py  json_writer.py  terminal.py
tests/: conftest.py  test_evaluation.py  test_ingest.py  test_response.py  test_retrieval.py
