[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-analyst"
version = "1.0.0"
description = "RAG-powered business report analyst comparing raw LLM vs prompt-engineered vs grounded retrieval"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2,<2",
    "langchain-community>=0.4,<1",
    "langchain-classic>=1.0,<2",
    "langchain-openai>=1.1,<2",
    "langchain-text-splitters>=1.1,<2",
    "chromadb>=1.0,<2",
    "openai>=2.0,<3",
    "pymupdf>=1.20,<2",
    "tiktoken>=0.12,<1",
    "rank-bm25>=0.2,<1",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[project.scripts]
rag-analyst = "rag_analyst.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_analyst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests requiring live LLM APIs (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
